feat(fonts): add crimson pro
closes #3

--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@theme {
+    --font-family-serif: "Crimson Pro", "serif";
+}
+
+/* Default font for site */
+body {
+    font-family: 'Crimson Pro', serif;
+}
