--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,10 @@
 @import "tailwindcss";
 
 @theme {
-    --font-family-serif: "Crimson Pro", "serif";
+    --font-family-serif: "IM Fell English", "serif";
 }
 
 /* Default font for site */
 body {
-    font-family: 'Crimson Pro', serif;
+    font-family: 'IM Fell English', serif;
 }
