--- a/src/app.css
+++ b/src/app.css
@@ -7,4 +7,8 @@
 /* Default font for site */
 body {
     font-family: 'IM Fell English', serif;
+
+    /* To correct inconsistent font weights across browsers */
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
 }
