--- a/apps/blog/src/app.css
+++ b/apps/blog/src/app.css
@@ -12,13 +12,20 @@
         -moz-osx-font-smoothing: grayscale;
         -webkit-font-smoothing: antialiased;
     }
+
+    .binary-text-overlay {
+        mask-image: linear-gradient(to top,
+                transparent 25%,
+                black 75%);
+    }
+
+    .binary-text-overlay-lg {
+        mask-image: linear-gradient(to top,
+                transparent 10%,
+                black 75%);
+    }
 }
 
-.binary-text-overlay {
-    mask-image: linear-gradient(to top,
-            transparent 25%,
-            black 75%);
-}
 
 .text-shadow {
     text-shadow: 1px 1px 25px var(--color-neutral-500, #737373);
