fix(blog): big TOC flows off page; make scrollable

--- a/apps/blog/src/app.css
+++ b/apps/blog/src/app.css
@@ -40,7 +40,7 @@
 }
 
 .toc-level {
-    @apply sm:sticky sm:top-48;
+    @apply sm:sticky sm:top-48 sm:max-h-[calc(100vh-12rem)] sm:overflow-y-auto;
 }
 
 .toc-level-2,
