feat(tailwind): v4 migration

--- a/apps/archive/src/app.css
+++ b/apps/archive/src/app.css
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+
+@config '../tailwind.config.ts';
 
 @layer base {
 
@@ -13,26 +13,24 @@
         -webkit-font-smoothing: antialiased;
     }
 
+    ::selection {
+        background-color: #ffc533;
+        color: #000;
+    }
+}
+
+@layer utilities {
     .binary-text-overlay {
-        mask-image: linear-gradient(to top,
-                transparent 25%,
-                black 75%);
+        mask-image: linear-gradient(to top, transparent 25%, black 75%);
     }
 
     .binary-text-overlay-lg {
-        mask-image: linear-gradient(to top,
-                transparent 10%,
-                black 75%);
+        mask-image: linear-gradient(to top, transparent 10%, black 75%);
     }
 
     .text-shadow {
         text-shadow: 1px 1px 25px var(--color-neutral-500, #737373);
     }
-}
-
-::selection {
-    background-color: #ffc533;
-    color: #000;
 }
 
 @layer base {
