--- a/apps/blog/src/app.css
+++ b/apps/blog/src/app.css
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+
+@config '../tailwind.config.ts';
 
 @layer base {
 
@@ -13,74 +13,72 @@
         -webkit-font-smoothing: antialiased;
     }
 
+    html {
+        scroll-behavior: smooth;
+    }
+}
+
+@layer utilities {
     .binary-text-overlay {
-        mask-image: linear-gradient(to top,
-                transparent 25%,
-                black 75%);
+        mask-image: linear-gradient(to top, transparent 25%, black 75%);
     }
 
     .binary-text-overlay-lg {
-        mask-image: linear-gradient(to top,
-                transparent 10%,
-                black 75%);
+        mask-image: linear-gradient(to top, transparent 10%, black 75%);
     }
-}
 
-html {
-    scroll-behavior: smooth;
-}
+    span.icon-link::before {
+        content: '#';
+        color: hsl(var(--accent));
+        position: absolute;
+        left: -23px;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+    }
 
-span.icon-link::before {
-    content: '#';
-    color: hsl(var(--accent));
-    position: absolute;
-    left: -23px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
+    h2:hover span.icon-link::before,
+    h3:hover span.icon-link::before,
+    h4:hover span.icon-link::before {
+        opacity: 1;
+    }
 
-h2:hover span.icon-link::before,
-h3:hover span.icon-link::before,
-h4:hover span.icon-link::before {
-    opacity: 1;
-}
+    h2,
+    h3,
+    h4 {
+        position: relative;
+    }
 
-h2,
-h3,
-h4 {
-    position: relative;
-}
+    ::selection {
+        /* `!important` to override Prism theme that I can't customise */
+        background: #ffc533 !important;
+        color: #000;
+    }
 
-::selection {
-    /* `!important` to override Prism theme that I can't customise */
-    background: #ffc533 !important;
-    color: #000;
-}
+    .text-shadow {
+        text-shadow: 1px 1px 25px var(--color-neutral-500, #737373);
+    }
 
-.text-shadow {
-    text-shadow: 1px 1px 25px var(--color-neutral-500, #737373);
-}
+    .toc {
+        @apply sm:basis-1/4 p-3 hidden sm:block;
+    }
 
-.toc {
-    @apply sm:basis-1/4 p-3 hidden sm:block;
-}
+    .toc-link {
+        @apply inline-block mb-3;
+    }
 
-.toc-link {
-    @apply inline-block mb-3;
-}
+    .toc-level {
+        @apply sm:sticky sm:top-48 sm:max-h-[calc(100vh-16rem)] sm:overflow-y-auto;
+    }
 
-.toc-level {
-    @apply sm:sticky sm:top-48 sm:max-h-[calc(100vh-16rem)] sm:overflow-y-auto;
-}
+    .toc-level-2,
+    .toc-level-3,
+    .toc-level-4 {
+        @apply ml-3;
+    }
 
-.toc-level-2,
-.toc-level-3,
-.toc-level-4 {
-    @apply ml-3;
-}
-
-nav> :last-child.toc-level {
-    @apply mb-0;
+    nav> :last-child.toc-level {
+        @apply mb-0;
+    }
 }
 
 @layer base {
