--- a/apps/blog/src/app.css
+++ b/apps/blog/src/app.css
@@ -2,6 +2,8 @@
 
 @config '../tailwind.config.ts';
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @layer base {
 
     /* Default font for site */
