--- a/apps/blog/src/app.css
+++ b/apps/blog/src/app.css
@@ -1,8 +1,14 @@
 @import 'tailwindcss';
+@plugin "@tailwindcss/typography";
 
 @config '../tailwind.config.ts';
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+    --font-serif: "IM Fell English", "serif";
+    --font-sans: "Hind", "sans";
+}
 
 @layer base {
 
@@ -20,15 +26,19 @@
     }
 }
 
+@utility binary-text-overlay {
+    mask-image: linear-gradient(to top, transparent 25%, black 75%);
+}
+
+@utility binary-text-overlay-lg {
+    mask-image: linear-gradient(to top, transparent 10%, black 75%);
+}
+
+@utility text-shadow {
+    text-shadow: 1px 1px 25px var(--color-neutral-500, #737373);
+}
+
 @layer utilities {
-    .binary-text-overlay {
-        mask-image: linear-gradient(to top, transparent 25%, black 75%);
-    }
-
-    .binary-text-overlay-lg {
-        mask-image: linear-gradient(to top, transparent 10%, black 75%);
-    }
-
     span.icon-link::before {
         content: '#';
         color: hsl(var(--accent));
@@ -54,10 +64,6 @@
         /* `!important` to override Prism theme that I can't customise */
         background: #ffc533 !important;
         color: #000;
-    }
-
-    .text-shadow {
-        text-shadow: 1px 1px 25px var(--color-neutral-500, #737373);
     }
 
     .toc {
