--- a/apps/contact/src/app.css
+++ b/apps/contact/src/app.css
@@ -4,6 +4,11 @@
 
 @custom-variant dark (&:where(.dark, .dark *));
 
+@theme {
+    --font-serif: "IM Fell English", "serif";
+    --font-sans: "Hind", "sans";
+}
+
 @layer base {
 
     /* Default font for site */
@@ -21,18 +26,16 @@
     }
 }
 
-@layer utilities {
-    .binary-text-overlay {
-        mask-image: linear-gradient(to top, transparent 25%, black 75%);
-    }
+@utility binary-text-overlay {
+    mask-image: linear-gradient(to top, transparent 25%, black 75%);
+}
 
-    .binary-text-overlay-lg {
-        mask-image: linear-gradient(to top, transparent 10%, black 75%);
-    }
+@utility binary-text-overlay-lg {
+    mask-image: linear-gradient(to top, transparent 10%, black 75%);
+}
 
-    .text-shadow {
-        text-shadow: 1px 1px 25px var(--color-neutral-500, #737373);
-    }
+@utility text-shadow {
+    text-shadow: 1px 1px 25px var(--color-neutral-500, #737373);
 }
 
 @layer base {
