--- a/apps/lib/app.css
+++ b/apps/lib/app.css
@@ -41,8 +41,9 @@
     mask-image: linear-gradient(to top, transparent 10%, black 75%);
 }
 
-@utility text-shadow {
-    text-shadow: 1px 1px 25px var(--color-neutral-500, #737373);
+/* Custom shadow for landing page headers */
+@theme {
+  --text-shadow-6xl: 1px 1px 25px var(--color-neutral-500, #737373);
 }
 
 @layer base {
