--- a/apps/lib/app.css
+++ b/apps/lib/app.css
@@ -43,7 +43,38 @@
 
 /* Custom shadow for landing page headers */
 @theme {
-  --text-shadow-6xl: 1px 1px 25px var(--color-neutral-500, #737373);
+    --text-shadow-6xl: 1px 1px 25px var(--color-neutral-500, #737373);
+}
+
+/*  ---  Boilerplate Tailwind theme variables  ---  */
+
+@theme {
+    --color-border: hsl(var(--border));
+    --color-input: hsl(var(--input));
+    --color-ring: hsl(var(--ring));
+    --color-background: hsl(var(--background));
+    --color-foreground: hsl(var(--foreground));
+
+    --color-primary: hsl(var(--primary));
+    --color-primary-foreground: hsl(var(--primary-foreground));
+
+    --color-secondary: hsl(var(--secondary));
+    --color-secondary-foreground: hsl(var(--secondary-foreground));
+
+    --color-destructive: hsl(var(--destructive));
+    --color-destructive-foreground: hsl(var(--destructive-foreground));
+
+    --color-muted: hsl(var(--muted));
+    --color-muted-foreground: hsl(var(--muted-foreground));
+
+    --color-accent: hsl(var(--accent));
+    --color-accent-foreground: hsl(var(--accent-foreground));
+
+    --color-popover: hsl(var(--popover));
+    --color-popover-foreground: hsl(var(--popover-foreground));
+
+    --color-card: hsl(var(--card));
+    --color-card-foreground: hsl(var(--card-foreground));
 }
 
 @layer base {
