--- a/apps/lib/app.css
+++ b/apps/lib/app.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 @source '../lib/';
 
 @config '../../tailwind.config.ts';
@@ -11,7 +11,6 @@
 }
 
 @layer base {
-
     /* Default font for site */
     html {
         font-family: var(--font-sans);
