fix(site): jumpy scroll area from dynamic viewport
closes #97

--- a/apps/lib/app.css
+++ b/apps/lib/app.css
@@ -32,6 +32,11 @@
     }
 }
 
+/* Ensure screen height is consistent across mobile and desktop, with no scrollbars */
+@utility screen-height {
+    @apply h-[100svh] sm:h-screen;
+}
+
 @utility binary-text-overlay {
     mask-image: linear-gradient(to top, transparent 25%, black 75%);
 }
